Fix issue noted in Jetpack admin where body jumps when modal is opened since the body position is changed to fixed.

--- a/client/components/modal/style.scss
+++ b/client/components/modal/style.scss
@@ -4,7 +4,6 @@
 /* This hack is used to prevent the body from scrolling when the modal is showing */
 body.dops-modal-showing {
 	overflow: hidden;
-    position: fixed;
 }
 
 .dops-modal-wrapper {
